--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.quill > .ql-container > .ql-editor.ql-blank::before {
+  font-size: 20px;
+  color: gray;
+}
+.ql-editor {
+  font-size: 20px;
+}
